Clean/Normalize state names - remove non-US data - remove unknown State data

--- a/fetch_and_process_data.ipynb
+++ b/fetch_and_process_data.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
+    "from typing import Union\n",
     "\n",
     "import pandas as pd\n",
     "import requests\n",
+    "from geopy.geocoders import Nominatim  # for getting state that a Lat, Lon is in\n",
+    "from geopy.location import Location\n",
     "\n",
     "from api_keys import OpenChargeMaps_API_KEY"
    ]
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +535,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +562,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique States: 301\n",
+      "Begin cleaning data...\n",
+      "Location 'Canada' not in US: (43.65454, -79.3858), DoubleTree Downtown Toronto: 108 Chestnut St, Toronto\n",
+      "Location 'Canada' not in US: (45.32669, -75.8208), Best Western Plus Ottawa Kanata Hotel & Conference Centre: 1876 Robertson Road, Ottawa\n",
+      "Location 'مصر' not in US: (24.527271, 31.991007), SemaConnect Bangalore - 1: k r nagar  #123, Block 4, 50 Feet Road, Indira Nagar, Bengaluru\n",
+      "Location not found: (1.0, 1.0), Yucca Library: 5648 N 15th Ave, Phoenix\n",
+      "Location 'Canada' not in US: (48.53629, -80.4664), Tanny Convinience Store: 362 MacDougall Street, Matheson\n",
+      "Location 'Canada' not in US: (45.4294, -75.6848), Days Inn by Wyndham Ottawa: 319 Rideau Street, Ottawa\n",
+      "Location 'Canada' not in US: (43.81076, -79.2927), Excellence Auto Collision: 211 Silver Star Boulevard, Scarborough\n",
+      "Location 'Canada' not in US: (43.79137, -79.22747), AmbuEnergy Office - Private Use: 4-465 Milner Ave., Toronto\n",
+      "Location 'Canada' not in US: (43.7517, -79.68546), Hyatt Place Toronto/Brampton: 3455 Queen Street East, Brampton\n",
+      "Location 'Canada' not in US: (43.09247, -79.08459), Comfort Hotel-DCFC: 5700 Stanley Avenue, Niagara Falls\n",
+      "Location 'Canada' not in US: (43.092, -79.08457), Comfort Hotel-L2: 5700 Stanley Avenue, Niagara Falls\n",
+      "Location not found: (12.9218757, -164.848855), LA Test site: 3355 Las Vegas Blvd S, Long Beach\n",
+      "Location in US but has no State: (41.823041499999995, -72.8761681), Mitchell Volkswagen: 51 albany turnpike, simsbury\n",
+      "Location in US but has no State: (41.7631926204881, -72.67140681115654), Front Street North Garage: 24 Front Street, Hartford\n",
+      "Location in US but has no State: (41.629315, -73.306455), Grace Mayflower Inn and Spa: Grace Mayflower Inn and Spa, nan\n",
+      "Location in US but has no State: (41.379441, -73.477961), Danbury, CT Supercharger: 7 Backus Ave, Danbury\n",
+      "------\n",
+      "Number of unique States (including None) 54\n",
+      "['MA' 'MI' 'ME' 'WI' 'OH' 'GA' 'MS' 'CO' 'NJ' 'MN' 'WA' 'ND' 'NY' 'ID'\n",
+      " 'MT' 'OR' 'SD' 'WY' 'VT' 'NH' None 'IA' 'IL' 'PA' 'RI' 'CT' 'UT' 'IN'\n",
+      " 'CA' 'NE' 'KS' 'DE' 'MD' 'NV' 'MO' 'VA' 'KY' 'DC' 'WV' 'TN' 'AR' 'NC'\n",
+      " 'OK' 'AZ' 'NM' 'SC' 'TX' 'AL' 'LA' 'FL' 'HI' 'AK' 'PR' 'AS']\n",
+      "------\n",
+      "Number of invalid locations to drop 16\n",
+      "New DataFrame shape: (55173, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean StateOrProvince values\n",
+    "# Only use short name (ie: 'TX'  NOT  'Texas' or 'texas')\n",
+    "print(\"Number of unique States:\", len(station_df[\"StateOrProvince\"].unique()))\n",
+    "print(\"Begin cleaning data...\")\n",
+    "\n",
+    "state_mapping = {\n",
+    "    \"Alabama\": \"AL\",\n",
+    "    \"Alaska\": \"AK\",\n",
+    "    \"Arizona\": \"AZ\",\n",
+    "    \"Arkansas\": \"AR\",\n",
+    "    \"California\": \"CA\",\n",
+    "    \"Colorado\": \"CO\",\n",
+    "    \"Connecticut\": \"CT\",\n",
+    "    \"Delaware\": \"DE\",\n",
+    "    \"Florida\": \"FL\",\n",
+    "    \"Georgia\": \"GA\",\n",
+    "    \"Hawaii\": \"HI\",\n",
+    "    \"Idaho\": \"ID\",\n",
+    "    \"Illinois\": \"IL\",\n",
+    "    \"Indiana\": \"IN\",\n",
+    "    \"Iowa\": \"IA\",\n",
+    "    \"Kansas\": \"KS\",\n",
+    "    \"Kentucky\": \"KY\",\n",
+    "    \"Louisiana\": \"LA\",\n",
+    "    \"Maine\": \"ME\",\n",
+    "    \"Maryland\": \"MD\",\n",
+    "    \"Massachusetts\": \"MA\",\n",
+    "    \"Michigan\": \"MI\",\n",
+    "    \"Minnesota\": \"MN\",\n",
+    "    \"Mississippi\": \"MS\",\n",
+    "    \"Missouri\": \"MO\",\n",
+    "    \"Montana\": \"MT\",\n",
+    "    \"Nebraska\": \"NE\",\n",
+    "    \"Nevada\": \"NV\",\n",
+    "    \"New Hampshire\": \"NH\",\n",
+    "    \"New Jersey\": \"NJ\",\n",
+    "    \"New Mexico\": \"NM\",\n",
+    "    \"New York\": \"NY\",\n",
+    "    \"North Carolina\": \"NC\",\n",
+    "    \"North Dakota\": \"ND\",\n",
+    "    \"Ohio\": \"OH\",\n",
+    "    \"Oklahoma\": \"OK\",\n",
+    "    \"Oregon\": \"OR\",\n",
+    "    \"Pennsylvania\": \"PA\",\n",
+    "    \"Rhode Island\": \"RI\",\n",
+    "    \"South Carolina\": \"SC\",\n",
+    "    \"South Dakota\": \"SD\",\n",
+    "    \"Tennessee\": \"TN\",\n",
+    "    \"Texas\": \"TX\",\n",
+    "    \"Utah\": \"UT\",\n",
+    "    \"Vermont\": \"VT\",\n",
+    "    \"Virginia\": \"VA\",\n",
+    "    \"Washington\": \"WA\",\n",
+    "    \"West Virginia\": \"WV\",\n",
+    "    \"Wisconsin\": \"WI\",\n",
+    "    \"Wyoming\": \"WY\",\n",
+    "    \"District of Columbia\": \"DC\",\n",
+    "    \"American Samoa\": \"AS\",\n",
+    "    \"Guam\": \"GU\",\n",
+    "    \"Northern Mariana Islands\": \"MP\",\n",
+    "    \"Puerto Rico\": \"PR\",\n",
+    "    \"United States Minor Outlying Islands\": \"UM\",\n",
+    "    \"US Virgin Islands\": \"VI\",\n",
+    "    # Other Variations\n",
+    "    \"Washington State\": \"WA\",\n",
+    "    \"Washington DC\": \"DC\",\n",
+    "    # Other Fixes\n",
+    "    \"California - CA\": \"CA\",\n",
+    "    \"NEW  YORK\": \"NY\",\n",
+    "    \"MAS\": \"MA\",\n",
+    "    \"QC\": \"CA\",  # 2 entries in Los Angeles\n",
+    "    # Counties\n",
+    "    \"Chatham County\": \"GA\",\n",
+    "    \"San Luis Obispo County\": \"CA\",\n",
+    "    \"Unorganized Borough\": \"AK\",\n",
+    "    \"Fond du Lac County\": \"WI\",\n",
+    "    \"Quay County\": \"NM\",\n",
+    "    \"SACRAMENTO COUNTY\": \"CA\",\n",
+    "    \"SAN FRANCISCO CITY AND COUNTY\": \"CA\",\n",
+    "    \"LOS ANGELES\": \"CA\",\n",
+    "    \"LOS ANGELES COUNTY\": \"CA\",\n",
+    "    \"SAN DIEGO COUNTY\": \"CA\",\n",
+    "    \"NORTH CAROLINA / SURRY COUNTY\": \"NC\",\n",
+    "    \"CAPE GIRARDEAU COUNTY\": \"MO\",\n",
+    "    \"MECKLENBURG COUNTY\": \"NC\",\n",
+    "    \"Iron County\": \"MI\",  # 1 entry in Michigan (there is more than 1 Iron County)\n",
+    "    # Spelling\n",
+    "    \"SOUTH CAROLINE\": \"SC\",\n",
+    "    \"MINNESOTTA\": \"MN\",\n",
+    "    \"PENNSLYVANIA\": \"PA\",\n",
+    "    \"PENNSYLVANNIA\": \"PA\",\n",
+    "    \"LOUISANA\": \"LA\",\n",
+    "    \"TX\\u200e\": \"TX\",  # LeftToRight mark?????\n",
+    "    \"NV\\u200e\": \"NV\",\n",
+    "    \"CONNETICUT\": \"CT\",\n",
+    "    \"TENNESSE\": \"TN\",\n",
+    "    \"MISSISIIPPI\": \"MS\",\n",
+    "    \"VIRGINA\": \"VA\",\n",
+    "    \"LLLINOIS\": \"IL\",\n",
+    "    \"ILLNOIS\": \"IL\",\n",
+    "    \"ILLINOS\": \"IL\",\n",
+    "    \"INIDANA\": \"IN\",\n",
+    "}\n",
+    "# Convert above dict to all upper case\n",
+    "cased_mapping_dict = {k.upper(): v for k,v in state_mapping.items()}\n",
+    "station_df[\"StateOrProvince\"] = station_df[\"StateOrProvince\"].str.replace(r\"[,|\\.]\", \"\", regex=True)\\\n",
+    "                                                             .str.upper()\\\n",
+    "                                                             .str.strip()\\\n",
+    "                                                             .replace(cased_mapping_dict)  # map will replace unfixed with NaN\n",
+    "# Drop Canada, India values\n",
+    "station_df = station_df[~station_df['StateOrProvince'].isin([\"QUEBEC\", \"BRITISH COLUMBIA\", \"KA\"])]\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"StateFinder\")\n",
+    "valid_states = frozenset(('AK', 'AL', 'AR', 'AZ', 'CA', 'CO', 'CT', 'DE', 'FL', 'GA',\n",
+    "                          'HI', 'IA', 'ID', 'IL', 'IN', 'KS', 'KY', 'LA', 'MA', 'MD',\n",
+    "                          'ME', 'MI', 'MN', 'MO', 'MS', 'MT', 'NC', 'ND', 'NE', 'NH',\n",
+    "                          'NJ', 'NM', 'NV', 'NY', 'OH', 'OK', 'OR', 'PA', 'RI', 'SC',\n",
+    "                          'SD', 'TN', 'TX', 'UT', 'VA', 'VT', 'WA', 'WI', 'WV', 'WY',\n",
+    "                          \"AS\", \"DC\", \"GU\", \"MP\", \"PR\", \"UM\", \"VI\"))\n",
+    "def get_state_from_lat_long(row) -> Union[str, None]:\n",
+    "    state = row[\"StateOrProvince\"]\n",
+    "    if state in valid_states:\n",
+    "        # No need to continue, state is already valid\n",
+    "        return state\n",
+    "    lat = row[\"Latitude\"]\n",
+    "    lon = row[\"Longitude\"]\n",
+    "    location = geolocator.reverse((lat, lon), exactly_one=True, addressdetails =True)  # type: Union[Location, None]\n",
+    "    if location:\n",
+    "        address = location.raw['address']\n",
+    "        state_full = address.get('state', '')\n",
+    "        country = address.get('country', '')\n",
+    "        if country != \"United States\":\n",
+    "            # Not in the US, need to get rid of it\n",
+    "            print(f\"Location '{country}' not in US: ({lat}, {lon}), {row['Title']}: {row['AddressLine1']}, {row['Town']}\")\n",
+    "            return None\n",
+    "        elif state_full == \"\":\n",
+    "            # No state name was given\n",
+    "            print(f\"Location in US but has no State: ({lat}, {lon}), {row['Title']}: {row['AddressLine1']}, {row['Town']}\")\n",
+    "            return None\n",
+    "        try:\n",
+    "            # State names from geolocator are full names, convert to short name\n",
+    "            return cased_mapping_dict[state_full.upper()]\n",
+    "        except KeyError:\n",
+    "            return None\n",
+    "    else:\n",
+    "        # geolocator could return None if location is invalid or some other issue\n",
+    "        print(f\"Location not found: ({lat}, {lon}), {row['Title']}: {row['AddressLine1']}, {row['Town']}\")\n",
+    "        return None\n",
+    "\n",
+    "station_df[\"StateOrProvince\"] = station_df.apply(get_state_from_lat_long, axis=1)\n",
+    "print(\"------\")\n",
+    "print(\"Number of unique States (including None)\", len(station_df[\"StateOrProvince\"].unique()))\n",
+    "print(station_df[\"StateOrProvince\"].unique())\n",
+    "print(\"------\")\n",
+    "print(\"Number of invalid locations to drop\", len(station_df.loc[station_df[\"StateOrProvince\"].isna()]))\n",
+    "station_df = station_df.dropna(subset=[\"StateOrProvince\"])\n",
+    "print(\"New DataFrame shape:\", station_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -567,33 +769,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 55195 entries, 0 to 55194\n",
+      "Int64Index: 55173 entries, 0 to 55194\n",
       "Data columns (total 21 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   Title              55195 non-null  object \n",
-      " 1   AddressLine1       55140 non-null  object \n",
-      " 2   Town               55161 non-null  object \n",
-      " 3   StateOrProvince    55123 non-null  object \n",
-      " 4   Postcode           54992 non-null  object \n",
-      " 5   Latitude           55195 non-null  float64\n",
-      " 6   Longitude          55195 non-null  float64\n",
-      " 7   ConnectionTypeIDs  55195 non-null  object \n",
-      " 8   PowerKWs           55195 non-null  object \n",
-      " 9   CurrentTypeIDs     55195 non-null  object \n",
-      " 10  OperatorID         55195 non-null  Int32  \n",
-      " 11  UsageTypeID        55195 non-null  Int32  \n",
-      " 12  UsageCost          3679 non-null   object \n",
-      " 13  NumberOfPoints     55195 non-null  Int32  \n",
-      " 14  StatusTypeID       55195 non-null  Int32  \n",
-      " 15  LUnknownCount      55195 non-null  Int32  \n",
-      " 16  L1Count            55195 non-null  Int32  \n",
-      " 17  L2Count            55195 non-null  Int32  \n",
-      " 18  L3Count            55195 non-null  Int32  \n",
+      " 0   Title              55173 non-null  object \n",
+      " 1   AddressLine1       55118 non-null  object \n",
+      " 2   Town               55140 non-null  object \n",
+      " 3   StateOrProvince    55173 non-null  object \n",
+      " 4   Postcode           54970 non-null  object \n",
+      " 5   Latitude           55173 non-null  float64\n",
+      " 6   Longitude          55173 non-null  float64\n",
+      " 7   ConnectionTypeIDs  55173 non-null  object \n",
+      " 8   PowerKWs           55173 non-null  object \n",
+      " 9   CurrentTypeIDs     55173 non-null  object \n",
+      " 10  OperatorID         55173 non-null  Int32  \n",
+      " 11  UsageTypeID        55173 non-null  Int32  \n",
+      " 12  UsageCost          3678 non-null   object \n",
+      " 13  NumberOfPoints     55173 non-null  Int32  \n",
+      " 14  StatusTypeID       55173 non-null  Int32  \n",
+      " 15  LUnknownCount      55173 non-null  Int32  \n",
+      " 16  L1Count            55173 non-null  Int32  \n",
+      " 17  L2Count            55173 non-null  Int32  \n",
+      " 18  L3Count            55173 non-null  Int32  \n",
       " 19  AddressLine2       69 non-null     object \n",
-      " 20  DatePlanned        2106 non-null   object \n",
+      " 20  DatePlanned        2103 non-null   object \n",
       "dtypes: Int32(8), float64(2), object(11)\n",
-      "memory usage: 7.6+ MB\n"
+      "memory usage: 8.0+ MB\n"
      ]
     }
    ],
@@ -603,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1493,7 @@
     "    \"Title\":\"\",                 // [str]\n",
     "    \"AddressLine1\":\"\",          // [str, null]\n",
     "    \"Town\":\"\",                  // [str, null]  City Name\n",
-    "    \"StateOrProvince\":\"\",       // [str, null]  State Name\n",
+    "    \"StateOrProvince\":\"\",       // [str]        State Name (Two Letter)\n",
     "    \"Postcode\":\"\",              // [str, null]  Zip Code\n",
     "    \"Latitude\":40.1234567890,   // [float]\n",
     "    \"Longitude\":-70.1234567890, // [float]\n",
